--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="container">
-  <ul class="nav nav-pills">
-  </ul>
+<div layout="row" layout-align="center center">
+  <h2>{{ title }}</h2>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+
