--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,24 @@
-<h2> {{ title }}</h2>
-<div>
-    <div>
-        <mat-form-field>
-            <input matInput placeholder="Username" [(ngModel)]="credentials.username">
-          </mat-form-field>
-    </div>
-    <div>
-        <mat-form-field>
-            <input matInput placeholder="Password" [(ngModel)]="credentials.password">
-          </mat-form-field>
-    </div>
-    <button type="submit" mat-raised-button color="primary" (click)="login()">Submit</button>
+<div class="signin-content">
+  <mat-card>
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="login()">
+        <p>Connectez-vous !</p>
+        <mat-form-field class="full-width-input">
+          <input matInput placeholder="Username" formControlName="username" required>
+          <mat-icon matSuffix class="secondary-text">person</mat-icon>
+          <mat-error *ngIf="isFieldInvalid('username')">
+            Entrez votre nom d'utilisateur
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width-input">
+          <input matInput type="password" placeholder="Password" formControlName="password" required>
+          <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
+          <mat-error *ngIf="isFieldInvalid('password')">
+            Entrez votre mot de passe
+          </mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit">Login</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
 </div>
