--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" *ngIf="isAuthenticated">
+<mat-toolbar color="primary">
     <mat-toolbar-row>
       <span class="flex"></span>
       <h1>{{ title }}</h1>
@@ -7,7 +7,7 @@
         <a mat-button [routerLink]="'/home'"> Home </a>
         <a mat-button [routerLink]="'/admin'" *hasRole="'ADMIN'"> Admin </a>
         <a mat-button [routerLink]="'/user'"> User </a>
-        <a mat-button [routerLink]="'/logout'"> Logout </a>
+        <a mat-button (click)="logout()"> Logout </a>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
