--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ body {
   padding: 0; }
 
 .sameline li {
-  list-style-type: none; }
+  list-style-type: disc; }
 
 .mr-btn {
   margin-right: 20px !important; }
