--- a/src/app/admin/dialog-data-user-dialog.html
+++ b/src/app/admin/dialog-data-user-dialog.html
@@ -1,11 +1,11 @@
 <div class="mon-dialog">
-    <h1 mat-dialog-title>Détails Utilisateur</h1>
+    <h1 mat-dialog-title [translate]="'app.admin.user-detail'">Détails Utilisateur</h1>
 <div mat-dialog-content>
   
-  <h4>ID: {{ data.user.id }}</h4>
-  <h4>USERNAME: {{ data.user.username }}</h4>
+  <h4 [translate]="'app.admin.id'" [translateParams]="{ value: data.user.id}">ID</h4>
+  <h4 [translate]="'app.admin.username'" [translateParams]="{ value: data.user.username}">USERNAME</h4>
   <div>
-    <h4 class="sameline">Rôles: </h4>
+    <h4 class="sameline" [translate]="'app.admin.roles'">Rôles: </h4>
     <ul class="sameline">
         <li class="sameline" *ngFor="let r of data.user.roles"> {{ r.authority }}</li>
     </ul>
