--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -1,2 +1,11 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div layout="column" class="base">
+    <div class="header">
+        <app-header></app-header>
+    </div>
+    <div class="body">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="footer"> 
+        <app-footer></app-footer>
+    </div>
+</div>
