--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,22 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
       <span class="flex"></span>
-      <h1>{{ title }}</h1>
+      <h1 [translate]="'app.app'">Angular</h1>
       <span class="flex"></span>
       <div style="margin-right: auto">
-        <a mat-button [routerLink]="'/home'"> Home </a>
-        <a mat-button [routerLink]="'/admin'" *hasRole="'ADMIN'"> Admin </a>
-        <a mat-button [routerLink]="'/user'"> User </a>
-        <a mat-button (click)="logout()"> Logout </a>
+        <a mat-button [routerLink]="'/home'"> <span [translate]="'app.header.home'">Home</span> </a>
+        <a mat-button [routerLink]="'/admin'" *hasRole="'ADMIN'"> <span [translate]="'app.header.admin'" >Admin</span> </a>
+        <a mat-button [routerLink]="'/user'"> <span [translate]="'app.header.user'">User</span> </a>
+        <a mat-button (click)="logout()"> <span [translate]="'app.header.logout'">Logout</span> </a>
+      </div>
+      <span class="spacer"></span>
+      <div class="pad-butt">
+        <label>
+          {{ 'app.lang.change' | translate }}
+          <select #langSelect (change)="translate.use(langSelect.value)">
+            <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang }}</option>
+          </select>
+        </label>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
