--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 
-<h2> {{ title }}</h2>
+<h2 [translate]="'app.home.title'" [translateParams]="{value: username}"> Bienvenue {{ username }}!</h2>
 
 <div *ngIf="user" class="mr-btn">
-  <button mat-raised-button color="primary" *hasRole="'ADMIN'" (click)="goToAdmin()">Page Admin</button>
-  <button mat-raised-button color="accent" (click)="goToUser()">Page User</button>
-  <button mat-raised-button color="warn" (click)="logout()">Logout</button>
+  <button mat-raised-button color="primary" *hasRole="'ADMIN'" (click)="goToAdmin()"><span [translate]="'app.home.admin-page'">Page Admin</span></button>
+  <button mat-raised-button color="accent" (click)="goToUser()"><span [translate]="'app.home.user-page'">Page User</span></button>
+  <button mat-raised-button color="warn" (click)="logout()"><span [translate]="'app.home.logout'">Logout</span></button>
 </div>
 
 <div *ngIf="!user">
-  <button mat-raised-button color="warn" (click)="login()">Login</button>
+  <button mat-raised-button color="warn" (click)="login()"><span [translate]="'app.home.login'">Login</span></button>
 </div>
