--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
+<mat-toolbar class="bg-mat-toolbar">
+    <mat-toolbar-row class="txt-header">
         <span class="flex"></span>
         <h1>Angular App & Spring Security</h1>
         <span class="flex"></span>
