--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,3 @@
-<h2 *ngIf="helloUser" [translate]="'app.user.hello'">Page User</h2>
+<div>
+    <h2 *ngIf="helloUser" [translate]="'app.user.hello'">Page User</h2>
+</div>
