--- a/src/app/base/base.component.scss
+++ b/src/app/base/base.component.scss
@@ -1,22 +1,27 @@
 .base {
-    width: 50%;
+    width: 100%;
     height: 100%;
     position: relative;
-    left: 25%;
 }
 
 .header {
     height: 8%; 
     position: relative;
+    background-color: rgb(0, 0, 0) !important;
 }
 
 .body {
-    height: 80%; 
+    height: 84%; 
     position: relative;
+    margin-left: 10%;
+    margin-top: 2%;
+    margin-right: 10%;
+    padding-top: 10px;
 }
 
 .footer {
     height: 8%; 
     position: relative; 
     margin: 0;
+    background-color: rgb(0, 0, 0) !important;
 }
