--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,9 @@ body {
   margin: 0;
   font-family: Roboto, Helvetica, sans-serif; }
 
+.bg-mat-toolbar {
+  background: black !important; }
+
 .btn button {
   margin-right: 8px; }
 
@@ -29,23 +32,28 @@ body {
   list-style-type: disc; }
 
 .base {
-  width: 50%;
+  width: 100%;
   height: 100%;
-  position: relative;
-  left: 25%; }
+  position: relative; }
 
 .header {
   height: 8%;
-  position: relative; }
+  position: relative;
+  background-color: black !important; }
 
 .body {
-  height: 80%;
-  position: relative; }
+  height: 84%;
+  position: relative;
+  margin-left: 10%;
+  margin-top: 2%;
+  margin-right: 10%;
+  padding-top: 10px; }
 
 .footer {
   height: 8%;
   position: relative;
-  margin: 0; }
+  margin: 0;
+  background-color: black !important; }
 
 .pad-butt {
   padding: 0 14px; }
@@ -53,9 +61,59 @@ body {
 .spacer {
   flex: 1 1 auto; }
 
+.txt-header {
+  color: #fff; }
+
+.img {
+  width: 50px;
+  border: 0;
+  margin-right: 22px !important; }
+
+.tlb-row {
+  margin: 0 auto !important;
+  max-width: 1440px; }
+
+.div-pos {
+  position: relative; }
+
+.span-pos {
+  position: absolute; }
+
+.icon-person-pos {
+  position: absolute;
+  padding: 0; }
+
+.lang-pos {
+  position: absolute;
+  margin-left: 40px;
+  padding: 3px; }
+
+.header-btn:hover {
+  color: orange; }
+
 .mr-btn {
   margin-right: 20px !important; }
 
+.login {
+  height: 100%;
+  position: fixed;
+  width: 50%;
+  position: relative;
+  left: 25%; }
+
+.login-page {
+  height: 80% !important;
+  padding-top: 10%;
+  text-align: left;
+  background-color: darkgray; }
+
+.lang {
+  float: right;
+  margin-top: -20%; }
+
+.login-btn {
+  float: right;
+  margin-top: 5%; }
 
 mat-card {
   max-width: 400px;
